# thesync

./: ._README.md  .env.local  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  render.yaml
thesync-backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  thesync.db
thesync-backend/alembic/: env.py
thesync-backend/alembic/versions/: 20260506_0001_initial_schema.py  20260506_0002_seed_roles_and_auth_trigger.py  20260506_0003_add_registration_functions.py  20260506_0004_track_registration_completion_in_users.py  20260506_0005_harden_auth_user_trigger.py  20260506_0006_seed_lookup_tables.py  20260506_0006_seed_schedule_statuses.py  20260506_0007_create_google_calendar_connections.py  20260507_0008_add_identifier_and_department_to_users.py  202605090010_restrict_availability_to_weekdays.py  20260509_0009_convert_availability_slots_to_recurring_rules.py
thesync-backend/controller/: __init__.py  auth.py  availability.py  calendar.py  dashboard.py  dependencies.py  middleware.py  notifications.py  panelists.py  schedules.py  users.py
thesync-backend/docs/: DEVELOPMENT_WORKFLOW.md
thesync-backend/model/: __init__.py  audit.py  auth.py  availability.py  base.py  calendar.py  dashboard.py  lookups.py  notification.py  panelist.py  schedule.py  user.py
thesync-backend/repository/: __init__.py  audit_repository.py  auth.py  availability.py  availability_repository.py  config.py  database.py  google_calendar.py  notification_repository.py  orm.py  panelist_repository.py  schedule_repository.py  supabase_client.py  user_repository.py
thesync-backend/tests/unit/: test_auth_domain_restriction.py  test_availability_repository.py  test_availability_service.py  test_calendar_service.py  test_dashboard_service.py  test_email_service.py  test_schedule_email_notifications.py  test_schedule_service_cancel.py  test_schedule_service_listing.py  test_schedule_slot_guard.py  test_schedule_status_service_approve.py  test_schedule_status_service_reschedule.py
thesync-backend/usecase/: auth.py  availability.py  availability_service.py  calendar.py  calendar_service.py  calendar_sync.py  dashboard.py  dashboard_service.py  email_service.py  notification_service.py  notifications.py  panelist_service.py  panelists.py  schedule_service.py  schedule_slot_guard.py  schedule_status_service.py  schedules.py
thesync-frontend/: .gitignore  (+6 more)
(+145 files in other folders)
